// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`highlights a selected vehicle 1`] = `
<svg
  className="m-ladder"
  height={500}
  viewBox="-90 -40 180 500"
  width={180}
>
  <line
    className="m-ladder__line"
    x1={-40}
    x2={-40}
    y1="0"
    y2={420}
  />
  <line
    className="m-ladder__line"
    x1={40}
    x2={40}
    y1="0"
    y2={420}
  />
  <circle
    className="m-ladder__stop-circle"
    cx={-40}
    cy={0}
    r="3"
  />
  <circle
    className="m-ladder__stop-circle"
    cx={40}
    cy={0}
    r="3"
  />
  <text
    className="m-ladder__timepoint-name"
    dominantBaseline="middle"
    textAnchor="middle"
    x="0"
    y={0}
  >
    t2
  </text>
  <circle
    className="m-ladder__stop-circle"
    cx={-40}
    cy={210}
    r="3"
  />
  <circle
    className="m-ladder__stop-circle"
    cx={40}
    cy={210}
    r="3"
  />
  <text
    className="m-ladder__timepoint-name"
    dominantBaseline="middle"
    textAnchor="middle"
    x="0"
    y={210}
  >
    t1
  </text>
  <circle
    className="m-ladder__stop-circle"
    cx={-40}
    cy={420}
    r="3"
  />
  <circle
    className="m-ladder__stop-circle"
    cx={40}
    cy={420}
    r="3"
  />
  <text
    className="m-ladder__timepoint-name"
    dominantBaseline="middle"
    textAnchor="middle"
    x="0"
    y={420}
  >
    t0
  </text>
  <g
    className="m-ladder__vehicle"
    onClick={[Function]}
    transform="translate(47,315) rotate(0,16,13)"
  >
    <g
      className="m-ladder__vehicle-icon"
      transform="scale(0.625)"
    >
      <path
        className="m-ladder__vehicle-triangle selected"
        d="m27.34 9.46 16.84 24.54a4.06 4.06 0 0 1 -1 5.64 4.11 4.11 0 0 1 -2.3.71h-33.72a4.06 4.06 0 0 1 -4.06-4.11 4 4 0 0 1 .72-2.24l16.84-24.54a4.05 4.05 0 0 1 5.64-1.05 4 4 0 0 1 1.04 1.05z"
      />
    </g>
    <svg
      className="m-ladder__vehicle-label"
      x="0"
      y="26"
    >
      <rect
        className="m-ladder__vehicle-label-background"
        height="11"
        rx="5.5"
        ry="5.5"
        width="30"
      />
      <text
        className="m-ladder__vehicle-label-text"
        textAnchor="inherit"
        transform="rotate(0,15,6)"
        x="5"
        y="9"
      >
        upward
      </text>
    </svg>
  </g>
  <g
    className="m-ladder__vehicle"
    onClick={[Function]}
    transform="translate(-77,-157.5) rotate(180,16,13)"
  >
    <g
      className="m-ladder__vehicle-icon"
      transform="scale(0.625)"
    >
      <path
        className="m-ladder__vehicle-triangle "
        d="m27.34 9.46 16.84 24.54a4.06 4.06 0 0 1 -1 5.64 4.11 4.11 0 0 1 -2.3.71h-33.72a4.06 4.06 0 0 1 -4.06-4.11 4 4 0 0 1 .72-2.24l16.84-24.54a4.05 4.05 0 0 1 5.64-1.05 4 4 0 0 1 1.04 1.05z"
      />
    </g>
    <svg
      className="m-ladder__vehicle-label"
      x="0"
      y="26"
    >
      <rect
        className="m-ladder__vehicle-label-background"
        height="11"
        rx="5.5"
        ry="5.5"
        width="30"
      />
      <text
        className="m-ladder__vehicle-label-text"
        textAnchor="inherit"
        transform="rotate(180,15,6)"
        x="5"
        y="9"
      >
        downward
      </text>
    </svg>
  </g>
</svg>
`;

exports[`renders a ladder 1`] = `
<svg
  className="m-ladder"
  height={500}
  viewBox="-90 -40 180 500"
  width={180}
>
  <line
    className="m-ladder__line"
    x1={-40}
    x2={-40}
    y1="0"
    y2={420}
  />
  <line
    className="m-ladder__line"
    x1={40}
    x2={40}
    y1="0"
    y2={420}
  />
  <circle
    className="m-ladder__stop-circle"
    cx={-40}
    cy={0}
    r="3"
  />
  <circle
    className="m-ladder__stop-circle"
    cx={40}
    cy={0}
    r="3"
  />
  <text
    className="m-ladder__timepoint-name"
    dominantBaseline="middle"
    textAnchor="middle"
    x="0"
    y={0}
  >
    t2
  </text>
  <circle
    className="m-ladder__stop-circle"
    cx={-40}
    cy={210}
    r="3"
  />
  <circle
    className="m-ladder__stop-circle"
    cx={40}
    cy={210}
    r="3"
  />
  <text
    className="m-ladder__timepoint-name"
    dominantBaseline="middle"
    textAnchor="middle"
    x="0"
    y={210}
  >
    t1
  </text>
  <circle
    className="m-ladder__stop-circle"
    cx={-40}
    cy={420}
    r="3"
  />
  <circle
    className="m-ladder__stop-circle"
    cx={40}
    cy={420}
    r="3"
  />
  <text
    className="m-ladder__timepoint-name"
    dominantBaseline="middle"
    textAnchor="middle"
    x="0"
    y={420}
  >
    t0
  </text>
  <g
    className="m-ladder__vehicle"
    onClick={[Function]}
    transform="translate(47,315) rotate(0,16,13)"
  >
    <g
      className="m-ladder__vehicle-icon"
      transform="scale(0.625)"
    >
      <path
        className="m-ladder__vehicle-triangle "
        d="m27.34 9.46 16.84 24.54a4.06 4.06 0 0 1 -1 5.64 4.11 4.11 0 0 1 -2.3.71h-33.72a4.06 4.06 0 0 1 -4.06-4.11 4 4 0 0 1 .72-2.24l16.84-24.54a4.05 4.05 0 0 1 5.64-1.05 4 4 0 0 1 1.04 1.05z"
      />
    </g>
    <svg
      className="m-ladder__vehicle-label"
      x="0"
      y="26"
    >
      <rect
        className="m-ladder__vehicle-label-background"
        height="11"
        rx="5.5"
        ry="5.5"
        width="30"
      />
      <text
        className="m-ladder__vehicle-label-text"
        textAnchor="inherit"
        transform="rotate(0,15,6)"
        x="5"
        y="9"
      >
        upward
      </text>
    </svg>
  </g>
  <g
    className="m-ladder__vehicle"
    onClick={[Function]}
    transform="translate(-77,-157.5) rotate(180,16,13)"
  >
    <g
      className="m-ladder__vehicle-icon"
      transform="scale(0.625)"
    >
      <path
        className="m-ladder__vehicle-triangle "
        d="m27.34 9.46 16.84 24.54a4.06 4.06 0 0 1 -1 5.64 4.11 4.11 0 0 1 -2.3.71h-33.72a4.06 4.06 0 0 1 -4.06-4.11 4 4 0 0 1 .72-2.24l16.84-24.54a4.05 4.05 0 0 1 5.64-1.05 4 4 0 0 1 1.04 1.05z"
      />
    </g>
    <svg
      className="m-ladder__vehicle-label"
      x="0"
      y="26"
    >
      <rect
        className="m-ladder__vehicle-label-background"
        height="11"
        rx="5.5"
        ry="5.5"
        width="30"
      />
      <text
        className="m-ladder__vehicle-label-text"
        textAnchor="inherit"
        transform="rotate(180,15,6)"
        x="5"
        y="9"
      >
        downward
      </text>
    </svg>
  </g>
  <g
    className="m-ladder__vehicle"
    onClick={[Function]}
    transform="translate(-77,-10) rotate(180,16,13)"
  >
    <g
      className="m-ladder__vehicle-icon"
      transform="scale(0.625)"
    >
      <path
        className="m-ladder__vehicle-triangle "
        d="m27.34 9.46 16.84 24.54a4.06 4.06 0 0 1 -1 5.64 4.11 4.11 0 0 1 -2.3.71h-33.72a4.06 4.06 0 0 1 -4.06-4.11 4 4 0 0 1 .72-2.24l16.84-24.54a4.05 4.05 0 0 1 5.64-1.05 4 4 0 0 1 1.04 1.05z"
      />
    </g>
    <svg
      className="m-ladder__vehicle-label"
      x="0"
      y="26"
    >
      <rect
        className="m-ladder__vehicle-label-background"
        height="11"
        rx="5.5"
        ry="5.5"
        width="30"
      />
      <text
        className="m-ladder__vehicle-label-text"
        textAnchor="inherit"
        transform="rotate(180,15,6)"
        x="5"
        y="9"
      >
        notimepoint
      </text>
    </svg>
  </g>
</svg>
`;

exports[`renders a ladder with no timepoints 1`] = `
<svg
  className="m-ladder"
  height={500}
  viewBox="-90 -40 180 500"
  width={180}
>
  <line
    className="m-ladder__line"
    x1={-40}
    x2={-40}
    y1="0"
    y2={420}
  />
  <line
    className="m-ladder__line"
    x1={40}
    x2={40}
    y1="0"
    y2={420}
  />
  <g
    className="m-ladder__vehicle"
    onClick={[Function]}
    transform="translate(47,-10) rotate(0,16,13)"
  >
    <g
      className="m-ladder__vehicle-icon"
      transform="scale(0.625)"
    >
      <path
        className="m-ladder__vehicle-triangle "
        d="m27.34 9.46 16.84 24.54a4.06 4.06 0 0 1 -1 5.64 4.11 4.11 0 0 1 -2.3.71h-33.72a4.06 4.06 0 0 1 -4.06-4.11 4 4 0 0 1 .72-2.24l16.84-24.54a4.05 4.05 0 0 1 5.64-1.05 4 4 0 0 1 1.04 1.05z"
      />
    </g>
    <svg
      className="m-ladder__vehicle-label"
      x="0"
      y="26"
    >
      <rect
        className="m-ladder__vehicle-label-background"
        height="11"
        rx="5.5"
        ry="5.5"
        width="30"
      />
      <text
        className="m-ladder__vehicle-label-text"
        textAnchor="inherit"
        transform="rotate(0,15,6)"
        x="5"
        y="9"
      >
        upward
      </text>
    </svg>
  </g>
</svg>
`;
